--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 .watch{
     text-align: center;
-    background-color: #000;
+    background-color: #8DCBE6;
     width: 100%;
     max-width: 360px;
     margin: 4rem auto;
@@ -22,10 +22,12 @@ body{
     border-radius: 1rem;
 }
 .time{
+    background-color: #000;
     color: #CD0404;
     font-size: 4rem;
     font-weight: 300;
     margin-bottom: 1rem;
+    border-radius: 1rem;
 }
 .controls{
     display: flex;
@@ -39,8 +41,8 @@ body{
     outline: none;
     user-select: none;
     cursor: pointer;
-    color: #F3F4F6;
-    background-color: #FF8B13;
+    color: #000;
+    background-color: #ECE8DD;
     margin: 0 0.5rem;
     padding: 0.5rem 1rem;
     transition: 0.4s;
