--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 .watch{
     text-align: center;
-    background-color: #8DCBE6;
+    background-color: #809A6F;
     width: 100%;
     max-width: 360px;
     margin: 4rem auto;
@@ -48,9 +48,6 @@ body{
     transition: 0.4s;
     border-radius: 0.5rem;
     font-size: 1.125rem;
-}
-button:hover{
-    opacity: 0.7;
 }
 button:active{
     background-color: #1F2937;
